# pi3d

./: .gitmodules  CMakeLists.emscripten  CMakeLists.txt  Makefile  Makefile.banana  README.md
docs/: README.md  index.html  pi3d.data  pi3d.wasm
model/girl/: girl.blend  test-girl-brunette.mtl
model/hover/: hover.blend
model/tank/: tank.blend  vehicle-ifv-dmm08.mtl
shader/: cloud.frag  cloud.vert  creation.frag  creation.vert  particle.frag  particle.vert  pkg.frag  pkg.vert  shader130.frag  shader130.vert  tunnel.frag  tunnel.vert
sketch/: screenlog.0
sketch/BNO055ToWiFi/: BNO055ToWiFi.ino
soil/: CMakeLists.txt  SOIL.c
src/: Mesh.cpp  Mesh.h  ass2pkg.cpp  bcminit.c  camera.h  create.cpp  cube_texture_and_coords.h  eglinit.c  eglstate.h  emscripten_main.cpp  estri.c  hash.cpp  hash.h  main.cpp  model.h  normal.geom  normal.vert  pi3d.cpp  pipkg.cpp  pipkg.h  pishader.cpp  pkg.cpp  pkg.h  shader.cpp  shader.frag  shader.h  shader.vert  triangle.cpp  triangle2.cpp
test/: Towcar.mdl  alien.blend  cube.blend  cube.blend1  push_back_car.dds  sphere.blend  spider.blend  spider.blend1  tri_cube.blend  tri_cube.mdl  tri_sphere.blend
